Move tomcat script to per-image docker script
Change-Id: Ic7f1fd61b7047e1b3b6daf02dcd1c6e566584be3
Issue-id: INT-205
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>